AM-699: mergify fix